--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,8 @@
-version: '3.9'
+version: '3'
 services:
         flaskwebapp:
-                image: flaskapp:latest
+                build: 
+                  context: . 
                 ports:
                         - "5000:5000"
 
